force-app/main/default/objects/Aditivos_Contratuais__c/Aditivos_Contratuais__c.object-meta.xml
<CustomObject>
    <label>Aditivo Contratual</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nome de Aditivos Contratuais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aditivos Contratuais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>