force-app/main/default/objects/Aditivos_Contratuais__c/fields/Atualizacao_monetaria__c.field-meta.xml
<CustomField>
    <fullName>Atualizacao_monetaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atualização monetária</label>
    <type>Checkbox</type>
</CustomField>