force-app/main/default/objects/Aditivos_Contratuais__c/fields/Cl_usula_s_Alterada_s__c.field-meta.xml
<CustomField>
    <fullName>Cl_usula_s_Alterada_s__c</fullName>
    <label>Cláusula(s) Alterada(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>