force-app/main/default/objects/Aditivos_Contratuais__c/fields/Cl_usula_Segunda__c.field-meta.xml
<CustomField>
    <fullName>Cl_usula_Segunda__c</fullName>
    <label>Cláusula Segunda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>