force-app/main/default/objects/Aditivos_Contratuais__c/fields/Cl_usula_Terceira__c.field-meta.xml
<CustomField>
    <fullName>Cl_usula_Terceira__c</fullName>
    <label>Cláusula Terceira</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>