force-app/main/default/objects/Aditivos_Contratuais__c/fields/Dura_o_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Dura_o_Adicional__c</fullName>
    <label>Duração Adicional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>