force-app/main/default/objects/Aditivos_Contratuais__c/fields/Editar_Clausulas__c.field-meta.xml
<CustomField>
    <fullName>Editar_Clausulas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Editar Clausulas</label>
    <type>Checkbox</type>
</CustomField>