force-app/main/default/objects/Aditivos_Contratuais__c/fields/Novo_valor_periodico_proposta__c.field-meta.xml
<CustomField>
    <fullName>Novo_valor_periodico_proposta__c</fullName>
    <formula>Valor_adicionado_subtraido_proposta__c +  Contrato_de_Servi_o_Relacionado__r.Valor_Mensal_do_Contrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Novo valor periódico proposta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>