force-app/main/default/objects/Aditivos_Contratuais__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ASSINATURA DO CONTRATO</fullName>
            </value>
            <value>
                <fullName>CONTRATO VIGENTE</fullName>
            </value>
            <value>
                <fullName>PERDIDO</fullName>
            </value>
            <value>
                <fullName>SEPARAÇÃO/ENTREGA</fullName>
            </value>
            <value>
                <fullName>EM CALIBRAÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO DOCUMENTAÇÕES ASSINADAS</fullName>
            </value>
            <value>
                <fullName>CONCLUÍDO (COM PENDENCIAS)</fullName>
            </value>
            <value>
                <fullName>CONCLUÍDO</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>