force-app/main/default/objects/Aditivos_Contratuais__c/fields/Tipo_da_Dura_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Dura_o__c</fullName>
    <label>Tipo da Duração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dia(s)</fullName>
            </value>
            <value>
                <fullName>mes(es)</fullName>
            </value>
            <value>
                <fullName>procedimento(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>