force-app/main/default/objects/Aditivos_Contratuais__c/fields/Valor_adicionado_proposta__c.field-meta.xml
<CustomField>
    <fullName>Valor_adicionado_proposta__c</fullName>
    <label>Valor adicionado proposta</label>
    <summarizedField>Ativo_do_Aditivo_Contratual__c.Valor_total__c</summarizedField>
    <summaryFilterItems>
        <field>Ativo_do_Aditivo_Contratual__c.Tipo_do_Aditivo__c</field>
        <operation>equals</operation>
        <value>ADIÇÃO</value>
    </summaryFilterItems>
    <summaryForeignKey>Ativo_do_Aditivo_Contratual__c.Aditivo_Contratual_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>