force-app/main/default/objects/Aditivos_Contratuais__c/fields/Valor_atualizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_atualizado__c</fullName>
    <label>Valor atualizado</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>