force-app/main/default/objects/Aditivos_Contratuais__c/fields/Valor_Total_Geral__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Geral__c</fullName>
    <formula>Contrato_de_Servi_o_Relacionado__r.Valor_Mensal_da_Proposta__c + (Valor_Total_Adicional__c -  Valor_Total_Suprimido__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Geral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>