force-app/main/default/objects/Aditivos_Contratuais__c/fields/Valor_Total_Suprimido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Suprimido__c</fullName>
    <label>Valor Total (Suprimido)</label>
    <summarizedField>Aditivo_Relacionado__c.Valor_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Aditivo_Relacionado__c.Tipo_de_aditivo__c</field>
        <operation>equals</operation>
        <value>SUPRESSÃO</value>
    </summaryFilterItems>
    <summaryForeignKey>Aditivo_Relacionado__c.Aditivo_Contratual_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>