force-app/main/default/objects/Aditivos_Contratuais__c/validationRules/Ativos.validationRule-meta.xml
<ValidationRule>
    <fullName>Ativos</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
TEXT(Status__c) == &apos;Aprovado&apos;,
Quantidade_de_Ativos_no_Aditivo__c == 0
)</errorConditionFormula>
    <errorMessage>Insira os ativos no aditivo para aprovar e gerar os pedidos automaticamente.</errorMessage>
</ValidationRule>