force-app/main/default/objects/Aditivos_Contratuais__c/validationRules/Manutencao.validationRule-meta.xml
<ValidationRule>
    <fullName>Manutencao</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW()</errorConditionFormula>
    <errorMessage>Aditivo em manutenção. Em alguns minutos será liberado novamente.</errorMessage>
</ValidationRule>